# PATCHIT-Auto-Remediation-Observability-Agent

./: .gitignore  DEMO.md  DESIGN_CLOSED_LOOP_REMEDIATION.md  PATCHIT_DRILL_PLAN.md  PATCHIT_WEBSITE_INSTRUCTIONS.md  README.md  RUNBOOK_OTHER_DAGS.md  pyproject.toml  service.Dockerfile
agent_service/: Dockerfile  package.json  server.js
airflow/: Dockerfile  README.md  docker-compose.yml  requirements.txt
airflow/dags/: patchit_complex_test_dag.py  patchit_validation_flaky_dag.py  patchit_validation_injection_dag.py  patchit_validation_rca_dag.py
airflow_extra_dags/: README.md  patchit_chaos_dag.py
airflow_extra_dags/chaos_lib/: scenarios.py  steps.py
ardoa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dbt/: dbt_project.yml
dbt/models/: schema.yml  stg_api_payload.sql
deploy/: README.md  docker-compose.patchit.yml  patchit.env.example
integrations/n8n/: README.md  Test.json  airflow_to_patchit_with_spark_enrichment.json  patchit_webhook_fanout_servicenow_slack_datadog_pagerduty.json
mock_api/: Dockerfile  app.py
observability_dashboard/: README.md  app.py  requirements.txt  swe_dashboard.py
observability_dashboard/pages/: 2_SWE-bench.py
patchit/: models.py  settings.py
patchit/adapters/: airflow_adapter.py
patchit/artifacts/: contracts.py
patchit/classifier/: rules.py
patchit/code_engine/: agentic.py  engine.py
patchit/context/: artifacts.py  collector.py
patchit/critic/: __init__.py  patch_critic.py
patchit/gitops/: github_rest.py  mock_github.py  pr_creator.py
scripts/: demo_local.sh
tests/: conftest.py
(+61 files in other folders)
