[project]
name = "patchit"
version = "0.1.0"
description = "Auto-Remediation Data Observability Agent (Phase-1 MVP)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "pydantic==2.10.4",
  "pydantic-settings==2.7.0",
  "httpx==0.28.1",
  "python-json-logger==3.2.1",
  "jsonschema==4.23.0",
  "PyYAML==6.0.2",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["patchit*"]
exclude = ["airflow*", "mock_api*", "dbt*", "agent_service*", "airflow_extra_dags*", "var*"]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "pytest-asyncio==0.25.0",
  "pytest-cov==6.0.0",
]
airflow = [
  "apache-airflow==2.9.3",
]
dbt = [
  "dbt-core==1.9.0",
  "dbt-duckdb==1.9.1",
  "duckdb==1.1.3",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"



